# kubord

./: .gitignore  Cargo.toml  README.md  config.example.json  config.example.toml  deb11
.github/workflows/: release.yml
src/: book.rs  lib.rs  mqtt.rs
src/commands/: librarian.rs  mod.rs  tracking.rs  weather.rs
